--- a/website/index.html
+++ b/website/index.html
@@ -29,7 +29,17 @@
                 </p>
                 <div class="hero-buttons">
                     <a href="#get-started" class="btn btn-primary">Start Mining</a>
+                    <a href="WHITEPAPER.pdf" class="btn btn-secondary" target="_blank" download>
+                        <svg width="20" height="20" fill="currentColor" viewBox="0 0 16 16">
+                            <path
+                                d="M14 14V4.5L9.5 0H4a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h8a2 2 0 0 0 2-2zM9.5 3A1.5 1.5 0 0 0 11 4.5h2V14a1 1 0 0 1-1 1H4a1 1 0 0 1-1-1V2a1 1 0 0 1 1-1h5.5v2z" />
+                            <path
+                                d="M4.603 14.087a.81.81 0 0 1-.438-.42c-.195-.388-.13-.771.08-1.177.313-.607.746-1.126 1.279-1.528A5.72 5.72 0 0 1 8 10a5.72 5.72 0 0 1 4.478 2.382c.533.402.966.92 1.279 1.528.209.406.275.789.08 1.177a.81.81 0 0 1-.438.42.06.06 0 0 1-.052-.019.51.51 0 0 1-.101-.132 8.78 8.78 0 0 0-1.424-.763 8.81 8.81 0 0 0-2.822-.445 8.81 8.81 0 0 0-2.822.445 8.78 8.78 0 0 0-1.424.763.51.51 0 0 1-.101.132.06.06 0 0 1-.052.019z" />
+                        </svg>
+                        Whitepaper
+                    </a>
                     <a href="https://github.com/cgebitcoin/btc3" class="btn btn-secondary" target="_blank">
+                        <!-- GitHub Icon -->
                         <svg width="20" height="20" fill="currentColor" viewBox="0 0 16 16">
                             <path
                                 d="M8 0C3.58 0 0 3.58 0 8c0 3.54 2.29 6.53 5.47 7.59.4.07.55-.17.55-.38 0-.19-.01-.82-.01-1.49-2.01.37-2.53-.49-2.69-.94-.09-.23-.48-.94-.82-1.13-.28-.15-.68-.52-.01-.53.63-.01 1.08.58 1.23.82.72 1.21 1.87.87 2.33.66.07-.52.28-.87.51-1.07-1.78-.2-3.64-.89-3.64-3.95 0-.87.31-1.59.82-2.15-.08-.2-.36-1.02.08-2.12 0 0 .67-.21 2.2.82.64-.18 1.32-.27 2-.27.68 0 1.36.09 2 .27 1.53-1.04 2.2-.82 2.2-.82.44 1.1.16 1.92.08 2.12.51.56.82 1.27.82 2.15 0 3.07-1.87 3.75-3.65 3.95.29.25.54.73.54 1.48 0 1.07-.01 1.93-.01 2.2 0 .21.15.46.55.38A8.012 8.012 0 0 0 16 8c0-4.42-3.58-8-8-8z" />
