--- a/website/index.html
+++ b/website/index.html
@@ -5,9 +5,9 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="description"
-        content="BTC3 - Cryptocurrency for the people. Fair launch, no premine, no ICO. Powered by RandomX CPU mining.">
-    <meta name="keywords" content="BTC3, cryptocurrency, Bitcoin, fair launch, RandomX, CPU mining, blockchain">
-    <title>BTC3 - Cryptocurrency for the People</title>
+        content="BitMinti - Cryptocurrency for the people. Fair launch, no premine, no ICO. Powered by RandomX CPU mining.">
+    <meta name="keywords" content="BitMinti, cryptocurrency, Bitcoin, fair launch, RandomX, CPU mining, blockchain">
+    <title>BitMinti - Cryptocurrency for the People</title>
     <link rel="stylesheet" href="style.css">
 </head>
 
@@ -17,10 +17,10 @@
         <div class="container">
             <div class="hero-content">
                 <div class="hero-logo">
-                    <img src="logo.png" alt="BTC3 Logo" class="logo-image">
+                    <img src="logo.svg" alt="BitMinti Logo" class="logo-image">
                 </div>
                 <h1 class="hero-title">
-                    <span class="gradient-text">BTC3</span>
+                    <span class="gradient-text">BitMinti</span>
                     <br>Cryptocurrency for the People
                 </h1>
                 <p class="hero-subtitle">
@@ -38,7 +38,7 @@
                         </svg>
                         Whitepaper
                     </a>
-                    <a href="https://github.com/cgebitcoin/btc3" class="btn btn-secondary" target="_blank">
+                    <a href="https://github.com/cgebitcoin/bitminti" class="btn btn-secondary" target="_blank">
                         <!-- GitHub Icon -->
                         <svg width="20" height="20" fill="currentColor" viewBox="0 0 16 16">
                             <path
@@ -69,7 +69,7 @@
     <!-- Mission Section -->
     <section class="mission">
         <div class="container">
-            <h2 class="section-title">Why BTC3 Exists</h2>
+            <h2 class="section-title">Why BitMinti Exists</h2>
             <div class="mission-content">
                 <div class="mission-problem">
                     <h3>The Problem</h3>
@@ -84,7 +84,7 @@
                 </div>
                 <div class="mission-solution">
                     <h3>The Solution</h3>
-                    <p>BTC3 returns to cryptocurrency's roots:</p>
+                    <p>BitMinti returns to cryptocurrency's roots:</p>
                     <ul>
                         <li>✊ <strong>No Premine</strong> - Not a single coin before launch</li>
                         <li>✊ <strong>No ICO</strong> - No wealthy early access</li>
@@ -153,7 +153,7 @@
                 </div>
                 <div class="info-item">
                     <div class="info-label">Block Reward</div>
-                    <div class="info-value">50 BTC3</div>
+                    <div class="info-value">50 BitMinti</div>
                 </div>
                 <div class="info-item">
                     <div class="info-label">PoW Algorithm</div>
@@ -184,7 +184,7 @@
                 <div class="step">
                     <div class="step-number">3</div>
                     <h3>Mine</h3>
-                    <p>Start mining and earn BTC3</p>
+                    <p>Start mining and earn BitMinti</p>
                     <code>./bin/btc3-cli generatetoaddress 1 $(./bin/btc3-cli getnewaddress)</code>
                 </div>
             </div>
@@ -202,7 +202,7 @@
         <div class="container">
             <h2 class="section-title">Join the Movement</h2>
             <p class="community-text">
-                BTC3 is more than a cryptocurrency - it's a movement to return financial power to ordinary people.
+                BitMinti is more than a cryptocurrency - it's a movement to return financial power to ordinary people.
                 <br>Everyone is welcome. Everyone starts equal.
             </p>
             <div class="social-links">
@@ -237,8 +237,8 @@
             <div class="footer-content">
                 <div class="footer-section">
                     <div class="footer-brand">
-                        <img src="logo.png" alt="BTC3 Logo" class="footer-logo">
-                        <h4>BTC3</h4>
+                        <img src="logo.png" alt="BitMinti Logo" class="footer-logo">
+                        <h4>BitMinti</h4>
                     </div>
                     <p>Cryptocurrency for the people, by the people.</p>
                 </div>
@@ -261,8 +261,8 @@
                 </div>
             </div>
             <div class="footer-bottom">
-                <p>&copy; 2025 BTC3. Released under MIT License. No warranties. Use at your own risk.</p>
-                <p class="footer-disclaimer">BTC3 is experimental software. Read <a
+                <p>&copy; 2025 BitMinti. Released under MIT License. No warranties. Use at your own risk.</p>
+                <p class="footer-disclaimer">BitMinti is experimental software. Read <a
                         href="https://github.com/cgebitcoin/btc3/blob/main/LEGAL.md">LEGAL.md</a> before using.</p>
             </div>
         </div>
