--- a/website/index.html
+++ b/website/index.html
@@ -17,7 +17,7 @@
         <div class="container">
             <div class="hero-content">
                 <div class="hero-logo">
-                    <img src="logo.svg" alt="BitMinti Logo" class="logo-image">
+                    <img src="logo.png" alt="BitMinti Logo" class="logo-image">
                 </div>
                 <h1 class="hero-title">
                     <span class="gradient-text">BitMinti</span>
